--- a/llm-playing.ipynb
+++ b/llm-playing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6a9207bb",
    "metadata": {},
    "outputs": [
@@ -18,12 +18,12 @@
     }
    ],
    "source": [
-    "1+2"
+    "1 + 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "787fbcf9",
    "metadata": {},
    "outputs": [
@@ -40,12 +40,15 @@
     "import numpy as np\n",
     "from numpy.linalg import norm\n",
     "\n",
+    "\n",
     "def get_embedding(text):\n",
-    "    response = ollama.embeddings(model='embeddinggemma:300m', prompt=text)\n",
-    "    return np.array(response['embedding'])\n",
+    "    response = ollama.embeddings(model=\"embeddinggemma:300m\", prompt=text)\n",
+    "    return np.array(response[\"embedding\"])\n",
+    "\n",
     "\n",
     "def cosine_similarity(a, b):\n",
     "    return np.dot(a, b) / (norm(a) * norm(b))\n",
+    "\n",
     "\n",
     "# 1. Generate embeddings\n",
     "king = get_embedding(\"king\")\n",
@@ -54,7 +57,7 @@
     "queen = get_embedding(\"queen\")\n",
     "\n",
     "# 2. Perform the arithmetic: King - Man + Woman\n",
-    "# We are essentially \"subtracting\" the concept of masculinity \n",
+    "# We are essentially \"subtracting\" the concept of masculinity\n",
     "# and \"adding\" the concept of femininity to the concept of royalty.\n",
     "masculinity_vector = man - woman\n",
     "result_vector = king - masculinity_vector\n",
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9c53c88c",
    "metadata": {},
    "outputs": [
@@ -104,6 +107,7 @@
     "MANIFESTS_ROOT = Path.home() / \".ollama/models/manifests\"\n",
     "BLOBS_ROOT = Path.home() / \".ollama/models/blobs\"\n",
     "\n",
+    "\n",
     "def _parse_ollama_model_ref(model: str) -> Tuple[str, str, str, str]:\n",
     "    \"\"\"Parse Ollama model reference into (host, namespace, repo_path, tag).\"\"\"\n",
     "    model = model.strip()\n",
@@ -132,6 +136,7 @@
     "\n",
     "    return host, namespace, repo_path, tag\n",
     "\n",
+    "\n",
     "def _candidate_manifest_paths(model: str) -> List[Path]:\n",
     "    host, namespace, repo_path, tag = _parse_ollama_model_ref(model)\n",
     "    repo_parts = repo_path.split(\"/\")\n",
@@ -156,6 +161,7 @@
     "            out.append(p)\n",
     "    return out\n",
     "\n",
+    "\n",
     "def _resolve_ollama_manifest(model: str) -> Path:\n",
     "    candidates = _candidate_manifest_paths(model)\n",
     "    existing = [p for p in candidates if p.is_file()]\n",
@@ -170,6 +176,7 @@
     "    existing.sort(key=lambda p: p.stat().st_mtime, reverse=True)\n",
     "    return existing[0]\n",
     "\n",
+    "\n",
     "def _resolve_ollama_gguf_blob(manifest_path: Path) -> Path:\n",
     "    obj = json.loads(manifest_path.read_text(encoding=\"utf-8\"))\n",
     "    for layer in obj.get(\"layers\", []):\n",
@@ -183,10 +190,12 @@
     "            return blob\n",
     "    raise ValueError(f\"No model layer found in manifest: {manifest_path}\")\n",
     "\n",
+    "\n",
     "def _assert_gguf_file(path: Path) -> None:\n",
     "    with path.open(\"rb\") as f:\n",
     "        magic = f.read(4)\n",
     "    assert magic == b\"GGUF\", f\"Expected GGUF file, got magic={magic!r} at {path}\"\n",
+    "\n",
     "\n",
     "manifest_path = _resolve_ollama_manifest(OLLAMA_MODEL)\n",
     "gguf_path = _resolve_ollama_gguf_blob(manifest_path)\n",
@@ -205,7 +214,9 @@
     "vocab_size = token_tensor.data.shape[0]\n",
     "\n",
     "# Determine embedding dimensionality from a dequantized row (robust across architectures).\n",
-    "embed_dim = int(gguf.dequantize(token_tensor.data[:1], token_tensor.tensor_type).shape[1])\n",
+    "embed_dim = int(\n",
+    "    gguf.dequantize(token_tensor.data[:1], token_tensor.tensor_type).shape[1]\n",
+    ")\n",
     "\n",
     "print(f\"Vocab size: {vocab_size}\")\n",
     "print(f\"Embedding dim: {embed_dim}\")\n",
@@ -215,10 +226,12 @@
     "tok_field = reader.fields[\"tokenizer.ggml.tokens\"]\n",
     "tokens_raw: Union[List[str], List[bytes]] = tok_field.contents()\n",
     "\n",
+    "\n",
     "def _tok_to_str(x: Union[str, bytes]) -> str:\n",
     "    if isinstance(x, bytes):\n",
     "        return x.decode(\"utf-8\", errors=\"replace\")\n",
     "    return str(x)\n",
+    "\n",
     "\n",
     "tokens: List[str] = [_tok_to_str(x) for x in tokens_raw]\n",
     "# assert len(tokens) == vocab_size, \"Token list size must match embedding vocab size\"\n",
@@ -232,23 +245,30 @@
     "            return tokens.index(c)\n",
     "        except ValueError:\n",
     "            continue\n",
-    "    raise ValueError(f\"Could not find a single-token match for {word!r}. Try another word.\")\n",
+    "    raise ValueError(\n",
+    "        f\"Could not find a single-token match for {word!r}. Try another word.\"\n",
+    "    )\n",
+    "\n",
     "\n",
     "def dequantize_rows(start: int, end: int) -> np.ndarray:\n",
     "    \"\"\"Dequantize embedding rows [start:end) to float32 shape [N, embed_dim].\"\"\"\n",
     "    q = token_tensor.data[start:end]\n",
     "    return gguf.dequantize(q, token_tensor.tensor_type)\n",
     "\n",
+    "\n",
     "def get_token_vector(token_id: int) -> np.ndarray:\n",
     "    return dequantize_rows(token_id, token_id + 1)[0]\n",
+    "\n",
     "\n",
     "def get_token_vector_str(token: str) -> np.ndarray:\n",
     "    tid = find_token_id(token)\n",
     "    return get_token_vector(tid)\n",
     "\n",
+    "\n",
     "def normalize(v: np.ndarray) -> np.ndarray:\n",
     "    n = np.linalg.norm(v)\n",
     "    return v if n == 0 else (v / n)\n",
+    "\n",
     "\n",
     "def find_closest_tokens(\n",
     "    vector: np.ndarray,\n",
@@ -267,11 +287,11 @@
     "\n",
     "    for start in range(0, vocab_size, chunk_size):\n",
     "        end = min(start + chunk_size, vocab_size)\n",
-    "        emb = dequantize_rows(start, end) # float32  [N, embed_dim]\n",
+    "        emb = dequantize_rows(start, end)  # float32  [N, embed_dim]\n",
     "        norms = np.linalg.norm(emb, axis=1, keepdims=True)\n",
     "        norms[norms == 0] = 1.0\n",
     "        emb = emb / norms\n",
-    "        scores = emb @ target # float32 [N]\n",
+    "        scores = emb @ target  # float32 [N]\n",
     "\n",
     "        for i, score in enumerate(scores):\n",
     "            tid = start + i\n",
@@ -286,6 +306,7 @@
     "    best = sorted(heap, reverse=True)\n",
     "    return [(tokens[tid], score, tid) for score, tid in best]\n",
     "\n",
+    "\n",
     "# ---- Chat-like function (local GGUF) ----\n",
     "# Note: `gguf` provides reading/dequantization utilities but does not execute the model forward pass.\n",
     "# For inference on a GGUF model we use llama.cpp via `llama-cpp-python`, still pointing at Ollama's local GGUF blob.\n",
@@ -294,6 +315,7 @@
     "\n",
     "_CHAT_MESSAGES: List[dict] = [{\"role\": \"system\", \"content\": SYSTEM_PROMPT}]\n",
     "_LLAMA = None\n",
+    "\n",
     "\n",
     "def _get_chat_template_from_gguf(reader: gguf.GGUFReader) -> Optional[str]:\n",
     "    field = reader.fields.get(\"tokenizer.chat_template\")\n",
@@ -304,7 +326,9 @@
     "        return str(data[0])\n",
     "    return None\n",
     "\n",
+    "\n",
     "_CHAT_TEMPLATE: Optional[str] = _get_chat_template_from_gguf(reader)\n",
+    "\n",
     "\n",
     "def _render_prompt(messages: List[dict]) -> str:\n",
     "    \"\"\"Render a prompt using GGUF's chat template when available; fallback to a simple ChatML-ish format.\"\"\"\n",
@@ -315,9 +339,15 @@
     "            def raise_exception(msg: str):\n",
     "                raise RuntimeError(msg)\n",
     "\n",
-    "            env = Environment(undefined=StrictUndefined, trim_blocks=True, lstrip_blocks=True)\n",
+    "            env = Environment(\n",
+    "                undefined=StrictUndefined, trim_blocks=True, lstrip_blocks=True\n",
+    "            )\n",
     "            j = env.from_string(_CHAT_TEMPLATE)\n",
-    "            return j.render(messages=messages, add_generation_prompt=True, raise_exception=raise_exception)\n",
+    "            return j.render(\n",
+    "                messages=messages,\n",
+    "                add_generation_prompt=True,\n",
+    "                raise_exception=raise_exception,\n",
+    "            )\n",
     "        except Exception:\n",
     "            pass\n",
     "\n",
@@ -326,6 +356,7 @@
     "        parts.append(f\"<|im_start|>{m['role']}\\n{m['content']}\\n<|im_end|>\")\n",
     "    parts.append(\"<|im_start|>assistant\\n\")\n",
     "    return \"\\n\".join(parts)\n",
+    "\n",
     "\n",
     "def _get_llama():\n",
     "    global _LLAMA\n",
@@ -350,6 +381,7 @@
     "        vocab_only=False,\n",
     "    )\n",
     "    return _LLAMA\n",
+    "\n",
     "\n",
     "def next_message(user_message: str) -> str:\n",
     "    \"\"\"\n",
@@ -378,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "722311c9",
    "metadata": {},
    "outputs": [
@@ -7029,23 +7061,39 @@
     "\n",
     "try:\n",
     "    print(\"User: Give me a 1-sentence summary of what you can do.\")\n",
-    "    print(\"Assistant:\", next_message(\"Give me a 1-sentence summary of what you can do.\"))\n",
+    "    print(\n",
+    "        \"Assistant:\", next_message(\"Give me a 1-sentence summary of what you can do.\")\n",
+    "    )\n",
     "    print()\n",
     "\n",
-    "    print(\"User: Write a Python function that computes cosine similarity between two numpy vectors.\")\n",
-    "    print(\"Assistant:\", next_message(\"Write a Python function that computes cosine similarity between two numpy vectors.\"))\n",
+    "    print(\n",
+    "        \"User: Write a Python function that computes cosine similarity between two numpy vectors.\"\n",
+    "    )\n",
+    "    print(\n",
+    "        \"Assistant:\",\n",
+    "        next_message(\n",
+    "            \"Write a Python function that computes cosine similarity between two numpy vectors.\"\n",
+    "        ),\n",
+    "    )\n",
     "    print()\n",
     "\n",
     "    print(\"User: Now explain in 2 bullet points how the prompt is constructed here.\")\n",
-    "    print(\"Assistant:\", next_message(\"Now explain in 2 bullet points how the prompt is constructed here.\"))\n",
+    "    print(\n",
+    "        \"Assistant:\",\n",
+    "        next_message(\n",
+    "            \"Now explain in 2 bullet points how the prompt is constructed here.\"\n",
+    "        ),\n",
+    "    )\n",
     "except Exception as e:\n",
-    "    print(\"Failed to run `next_message` (likely missing llama-cpp-python or model load issue).\")\n",
+    "    print(\n",
+    "        \"Failed to run `next_message` (likely missing llama-cpp-python or model load issue).\"\n",
+    "    )\n",
     "    print(\"Error:\", repr(e))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "12635dad",
    "metadata": {},
    "outputs": [
@@ -7101,7 +7149,6 @@
     }
    ],
    "source": [
-    "\n",
     "# 3) Demo: king - man + woman (single-token lookup)\n",
     "print(\"3) Demo\")\n",
     "print(\"3a) find token IDs for inputs\")\n",
@@ -7118,7 +7165,9 @@
     "masculinity_vector = man_vec - woman_vec\n",
     "\n",
     "target_vector = queen_vec + masculinity_vector\n",
-    "target_vector = get_token_vector_str(\"emoji\") - get_token_vector_str(\"emoji\") #+ get_token_vector_str(\"apple\") #+ get_token_vector_str(\"Playstation\")\n",
+    "target_vector = get_token_vector_str(\"emoji\") - get_token_vector_str(\n",
+    "    \"emoji\"\n",
+    ")  # + get_token_vector_str(\"apple\") #+ get_token_vector_str(\"Playstation\")\n",
     "\n",
     "ignore = []\n",
     "print(\"3b) find closest tokens\")\n",
@@ -7129,7 +7178,9 @@
     "    print(f\"{i}. {tok!r} (id={tid}, similarity={score:.4f})\")\n",
     "\n",
     "longest_token = max(tokens, key=lambda t: len(t))\n",
-    "print(f\"\\nLongest token in vocabulary is {len(longest_token)} characters: {longest_token!r}\")\n",
+    "print(\n",
+    "    f\"\\nLongest token in vocabulary is {len(longest_token)} characters: {longest_token!r}\"\n",
+    ")\n",
     "\n",
     "ten_longest_tokens = heapq.nlargest(10, tokens, key=lambda t: len(t))\n",
     "print(\"\\nTop 10 longest tokens in vocabulary:\")\n",
