--- a/llm-playing.ipynb
+++ b/llm-playing.ipynb
@@ -94,7 +94,7 @@
     "import heapq\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from typing import Iterable, List, Optional, Tuple, Union\n",
+    "from typing import Iterable, List, Optional, Tuple, Union, cast\n",
     "\n",
     "import numpy as np\n",
     "import gguf\n",
@@ -299,12 +299,12 @@
     "\n",
     "def find_closest_tokens(\n",
     "    vector: np.ndarray,\n",
+    "    vocab_size: int,\n",
+    "    token_tensor,\n",
+    "    tokens: List[str],\n",
     "    k: int = 5,\n",
     "    ignore_ids: Optional[Iterable[int]] = None,\n",
     "    chunk_size: int = 2048,\n",
-    "    vocab_size: int = None,\n",
-    "    token_tensor=None,\n",
-    "    tokens: List[str] = None,\n",
     ") -> List[Tuple[str, float, int]]:\n",
     "    \"\"\"\n",
     "    Find top-k cosine-similar tokens across the *entire* vocab by dequantizing in chunks.\n",
@@ -420,6 +420,7 @@
     "        top_p=0.95,\n",
     "        stop=[\"<|im_end|>\", \"</s>\"],\n",
     "    )\n",
+    "    out = cast(dict, out)\n",
     "    text = (out.get(\"choices\", [{}])[0].get(\"text\") or \"\").strip()\n",
     "    messages.append({\"role\": \"assistant\", \"content\": text})\n",
     "    return text"
@@ -3715,18 +3716,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.14"
   }
  },
  "nbformat": 4,
