--- a/llm-playing.ipynb
+++ b/llm-playing.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9c53c88c",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,9 @@
       "Vocab size: 262144\n",
       "Embedding dim: 640\n",
       "Embedding quant type: 8\n",
-      "2) Load tokenizer tokens so we can decode token IDs back to text\n"
+      "2) Load tokenizer tokens so we can decode token IDs back to text\n",
+      "No valid chat template found in GGUF; trying Ollama CLI...\n",
+      "context['chat_template']='{{- $systemPromptAdded := false }}\\n{{- range $i, $_ := .Messages }}\\n{{- $last := eq (len (slice $.Messages $i)) 1 }}\\n{{- if eq .Role \"user\" }}<start_of_turn>user\\n{{- if (and (not $systemPromptAdded) $.System) }}\\n{{- $systemPromptAdded = true }}\\n{{ $.System }}\\n{{ end }}\\n{{ .Content }}<end_of_turn>\\n{{ if $last }}<start_of_turn>model\\n{{ end }}\\n{{- else if eq .Role \"assistant\" }}<start_of_turn>model\\n{{ .Content }}{{ if not $last }}<end_of_turn>\\n{{ end }}\\n{{- end }}\\n{{- end }}'\n"
      ]
     }
    ],
@@ -93,6 +95,7 @@
     "import json\n",
     "import heapq\n",
     "import os\n",
+    "import subprocess\n",
     "from pathlib import Path\n",
     "from typing import Iterable, List, Optional, Tuple, Union, cast\n",
     "\n",
@@ -209,8 +212,19 @@
     "        return None\n",
     "    data = getattr(field, \"data\", None)\n",
     "    if isinstance(data, list) and data:\n",
-    "        return str(data[0])\n",
+    "        template = str(data[0])\n",
+    "        if template.isdigit():\n",
+    "            return None\n",
+    "        return template\n",
     "    return None\n",
+    "\n",
+    "\n",
+    "def _get_ollama_chat_template(model: str) -> Optional[str]:\n",
+    "    import ollama\n",
+    "\n",
+    "    info = ollama.show(model)\n",
+    "    template = str(info.get(\"template\"))\n",
+    "    return str(template)\n",
     "\n",
     "\n",
     "def load_ollama_gguf_context(model: str) -> dict:\n",
@@ -246,6 +260,9 @@
     "    tokens: List[str] = [_tok_to_str(x) for x in tokens_raw]\n",
     "\n",
     "    chat_template = _get_chat_template_from_gguf(reader)\n",
+    "    if not chat_template:\n",
+    "        print(\"No valid chat template found in GGUF; trying Ollama CLI...\")\n",
+    "        chat_template = _get_ollama_chat_template(model)\n",
     "\n",
     "    return {\n",
     "        \"reader\": reader,\n",
@@ -261,7 +278,7 @@
     "# %load_ext line_profiler\n",
     "# %lprun -f load_ollama_gguf_context context = load_ollama_gguf_context(OLLAMA_MODEL)\n",
     "context = load_ollama_gguf_context(OLLAMA_MODEL)\n",
-    "_CHAT_TEMPLATE = context[\"chat_template\"]\n",
+    "print(f\"{context['chat_template']=}\")\n",
     "\n",
     "\n",
     "def find_token_id(word: str, tokens: List[str]) -> int:\n",
@@ -343,13 +360,12 @@
     "\n",
     "SYSTEM_PROMPT = \"You are a helpful assistant.\"\n",
     "\n",
-    "_CHAT_MESSAGES: List[dict[str, str]] = [{\"role\": \"system\", \"content\": SYSTEM_PROMPT}]\n",
     "_LLAMA = None\n",
     "\n",
     "\n",
     "def _render_prompt(messages: List[dict[str, str]]) -> str:\n",
     "    \"\"\"Render a prompt using GGUF's chat template when available; fallback to a simple ChatML-ish format.\"\"\"\n",
-    "    if _CHAT_TEMPLATE:\n",
+    "    if context[\"chat_template\"]:\n",
     "        try:\n",
     "            from jinja2 import Environment, StrictUndefined\n",
     "\n",
@@ -359,7 +375,7 @@
     "            env = Environment(\n",
     "                undefined=StrictUndefined, trim_blocks=True, lstrip_blocks=True\n",
     "            )\n",
-    "            j = env.from_string(_CHAT_TEMPLATE)\n",
+    "            j = env.from_string(context[\"chat_template\"])\n",
     "            return j.render(\n",
     "                messages=messages,\n",
     "                add_generation_prompt=True,\n",
@@ -428,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "722311c9",
    "metadata": {},
    "outputs": [
@@ -634,7 +650,20 @@
       "load: control token: 261832 '<unused5930>' is not marked as EOG\n",
       "load: control token: 261831 '<unused5929>' is not marked as EOG\n",
       "load: control token: 261830 '<unused5928>' is not marked as EOG\n",
-      "load: control token: 261828 '<unused5926>' is not marked as EOG\n",
+      "load: control token: 261828 '<unused5926>' is not marked as EOG\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User: Give me a 1-sentence summary of what you can do.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "load: control token: 261826 '<unused5924>' is not marked as EOG\n",
       "load: control token: 261823 '<unused5921>' is not marked as EOG\n",
       "load: control token: 261822 '<unused5920>' is not marked as EOG\n",
@@ -658,20 +687,7 @@
       "load: control token: 261787 '<unused5885>' is not marked as EOG\n",
       "load: control token: 261785 '<unused5883>' is not marked as EOG\n",
       "load: control token: 261783 '<unused5881>' is not marked as EOG\n",
-      "load: control token: 261782 '<unused5880>' is not marked as EOG\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User: Give me a 1-sentence summary of what you can do.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "load: control token: 261782 '<unused5880>' is not marked as EOG\n",
       "load: control token: 261779 '<unused5877>' is not marked as EOG\n",
       "load: control token: 261778 '<unused5876>' is not marked as EOG\n",
       "load: control token: 261777 '<unused5875>' is not marked as EOG\n",
@@ -772,14 +788,30 @@
       "load: control token: 261607 '<unused5705>' is not marked as EOG\n",
       "load: control token: 261606 '<unused5704>' is not marked as EOG\n",
       "load: control token: 261605 '<unused5703>' is not marked as EOG\n",
-      "load: control token: 261603 '<unused5701>' is not marked as EOG\n",
-      "load: control token: 261602 '<unused5700>' is not marked as EOG\n",
-      "load: control token: 261598 '<unused5696>' is not marked as EOG\n",
-      "load: control token: 261597 '<unused5695>' is not marked as EOG\n",
-      "load: control token: 261593 '<unused5691>' is not marked as EOG\n",
-      "load: control token: 261591 '<unused5689>' is not marked as EOG\n",
-      "load: control token: 261589 '<unused5687>' is not marked as EOG\n",
-      "load: control token: 261588 '<unused5686>' is not marked as EOG\n",
+      "load: control token: 261823 '<unused5921>' is not marked as EOG\n",
+      "load: control token: 261822 '<unused5920>' is not marked as EOG\n",
+      "load: control token: 261819 '<unused5917>' is not marked as EOG\n",
+      "load: control token: 261817 '<unused5915>' is not marked as EOG\n",
+      "load: control token: 261814 '<unused5912>' is not marked as EOG\n",
+      "load: control token: 261810 '<unused5908>' is not marked as EOG\n",
+      "load: control token: 261809 '<unused5907>' is not marked as EOG\n",
+      "load: control token: 261808 '<unused5906>' is not marked as EOG\n",
+      "load: control token: 261807 '<unused5905>' is not marked as EOG\n",
+      "load: control token: 261806 '<unused5904>' is not marked as EOG\n",
+      "load: control token: 261805 '<unused5903>' is not marked as EOG\n",
+      "load: control token: 261804 '<unused5902>' is not marked as EOG\n",
+      "load: control token: 261803 '<unused5901>' is not marked as EOG\n",
+      "load: control token: 261798 '<unused5896>' is not marked as EOG\n",
+      "load: control token: 261797 '<unused5895>' is not marked as EOG\n",
+      "load: control token: 261794 '<unused5892>' is not marked as EOG\n",
+      "load: control token: 261793 '<unused5891>' is not marked as EOG\n",
+      "load: control token: 261792 '<unused5890>' is not marked as EOG\n",
+      "load: control token: 261789 '<unused5887>' is not marked as EOG\n",
+      "load: control token: 261787 '<unused5885>' is not marked as EOG\n",
+      "load: control token: 261785 '<unused5883>' is not marked as EOG\n",
+      "load: control token: 261783 '<unused5881>' is not marked as EOG\n",
+      "load: control token: 261782 '<unused5880>' is not marked as EOG\n",
+      "load: control token: 261779 '<unused5877>' is not marked as EOG\n",
       "load: control token: 261778 '<unused5876>' is not marked as EOG\n",
       "load: control token: 261777 '<unused5875>' is not marked as EOG\n",
       "load: control token: 261776 '<unused5874>' is not marked as EOG\n",
@@ -3546,7 +3578,6 @@
       "load: control token: 256169 '<unused267>' is not marked as EOG\n",
       "load: control token: 256168 '<unused266>' is not marked as EOG\n",
       "load: control token: 256167 '<unused265>' is not marked as EOG\n",
-      "load: control token: 256164 '<unused262>' is not marked as EOG\n",
       "IOPub message rate exceeded.\n",
       "The Jupyter server will temporarily stop sending output\n",
       "to the client in order to avoid crashing it.\n",
@@ -3716,6 +3747,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
